# url-collector

./: .gitignore  BUILD.md  URLCollector.spec  build_windows.bat  main.py  pyproject.toml  requirements.txt  url_collector.spec
.github/workflows/: build.yml
assets/: icon.icns
url_collector/: __init__.py  ai_filter.py  automation.py  brand_search.py  cli.py  feedback_automation.py  feedback_code_generator.py  filter.py  groq_filter.py  gui.py  serper.py
